codex-rs/tui/src/snapshots/codex_tui__app__tests__path_backed_agent_picker.snap
---
source: tui/src/app/tests.rs
expression: "render_bottom_popup(&app.chat_widget, 80)"
---
  Subagents
  Select an agent to watch. ⌥+← previous, ⌥+→ next.

  Search subagents

› • /root/worker  mid-turn context ?

  enter select · esc back
